# PostgresMimicImporter

./: .dockerignore  .env  .envrc  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  config.json  docker-compose.yaml  lefthook.yml  mimic_import.dockerfile  pyproject.toml  requirements.txt
.changes/: 0.0.1.md  0.0.2.md  0.0.3.md  0.0.4.md
.changes/unreleased/: Added-20260518-192455.yaml  Added-20260518-192509.yaml  Added-20260518-192510.yaml  Added-20260518-194322.yaml  Added-20260518-205852.yaml  Added-20260522-132211.yaml  Added-20260522-132450.yaml  Added-20260522-184850.yaml  Added-20260522-215456.yaml  Added-20260523-072658.yaml  Added-20260523-073000.yaml  Added-20260523-073500.yaml  Added-20260523-074000.yaml  Added-20260523-111500.yaml  Changed-20260518-192455.yaml  Changed-20260522-184535.yaml  Fixed-20260518-192455.yaml  Fixed-20260522-215600.yaml  Fixed-20260522-215926.yaml  Fixed-20260523-080000.yaml  Fixed-20260523-082500.yaml  Fixed-20260523-110000.yaml  Fixed-20260523-122000.yaml  Removed-20260518-192455.yaml  Security-20260522-220129.yaml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yaml
.github/: pull_request_template.md
.github/workflows/: ci.yml  release.yml
docs/: platform-plan.md
docs/superpowers/plans/: 2026-05-22-release-workflow.md
pgmimic/: main.py  notes.md
pgmimic/_config/: _config_handler.py  models.py
pgmimic/_db/: _db_handler.py
pgmimic/_db/SQL/2.0/: contraint.sql  create.sql  index.sql
pgmimic/_db/SQL/2.2/: constraint.sql  create.sql  index.sql  postgres-functions.sql
pgmimic/_db/SQL/2.2/derived/demographics/: age.sql
pgmimic/_db/SQL/2.2/derived/measurement/: height.sql
pgmimic/_db/SQL/3.1/: README.md  create.sql
pgmimic/_files/: _file_handler.py
pgmimic/importer/: mimic_importer.py
tests/: e2e.py  test_config_model.py  test_config_versions.py  test_data_schemas_filter.py  test_db_handler_errors.py  test_db_paths.py  test_file_for_table.py  test_fixtures.py  test_psql_subprocess.py  test_real_config_versions.py  test_smoke.py
tests/fixtures/: generate.py  validate.py
tests/fixtures/schemas/: __init__.py  mimiciv_ed.py  mimiciv_hosp.py  mimiciv_icu.py
